# unik

./: DEPLOYMENT.md  QUICKSTART.md  README.md  STRUCTURE.md  SUMMARY.md  example.py  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
tests/: test_unik.py
unik/: __init__.py
